updates to get manual and auto assignments of a representative.